# EventHandlers

./: CMakeLists.txt  Readme.md  main.cpp
CallbackRegistry/: CallbackRegistry.h  CallbackRegistry_Impl.h  CallbackRegistry_Test.h
Observable/: Observable.h  Observable_Impl.h  Observable_Test.h
